[metadata]
name = dicomstack
description = A pydicom wrapper for simple loading and handling of DICOM stacks
version = 1.4.12

[options]
python_requires = >=3.7
install_requires = 
    numpy
    pydicom>=2.4
packages = dicomstack

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    dicomstack = dicomstack.cli:cli